--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
+    "dotenv": "^12.0.4",
     "express": "^4.17.2",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
